--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "immutable": "^4.0.0-rc.12",
+    "mathjs": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^6.0.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "react-transition-group": "^2.6.0",
     "redux": "^4.0.1",
     "typescript": "^3.3.3333",
