--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "mathjs": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.3",
+    "react-canvas": "^1.3.0",
     "react-dom": "^16.8.3",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.6.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.3.3333",
     "uuidv4": "^3.0.1"
   },
