--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ REACT_APP_TIME_INTERVAL=10
 REACT_APP_CALL_RATIO=100
 
 REACT_APP_MAX_TOWER_LEVEL=5
+
+REACT_APP_BOARD_SIZE=500
+REACT_APP_PIXEL_SIZE=3
