--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bezier-js": "^2.3.2",
     "dotenv": "^6.2.0",
     "immutable": "^4.0.0-rc.12",
     "mathjs": "^5.6.0",
