--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bezier-js": "^2.3.2",
-    "dotenv": "^6.2.0",
+    "@types/bezier-js": "0.0.8",
+    "@types/dotenv": "^6.1.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.0",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-redux": "^7.0.5",
+    "@types/uuidv4": "^2.0.0",
+    "bezier-js": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
     "mathjs": "^5.6.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.8.3",
-    "react-canvas": "^1.3.0",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.6.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.3.4000",
     "uuidv4": "^3.0.1"
   },
   "scripts": {
