Models for attack/marine & setInterval => requestAnimationFrame

--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ REACT_APP_VOID_IMGURL='data:image/gif;base64,R0lGODlhAQABAIAAAAUEBAAAACwAAAAAAQA
 REACT_APP_TIME_INTERVAL=10
 REACT_APP_REALAMOUNT_RATIO=1000
 
+REACT_APP_MARINE_INTERVAL=300
+
 REACT_APP_MAX_TOWER_LEVEL=5
 
 REACT_APP_BOARD_SIZE=500
