--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/uuidv4": "^2.0.0",
     "bezier-js": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
+    "jest-canvas-mock": "^2.0.0-beta.1",
     "mathjs": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.5",
@@ -39,5 +40,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "tslint": "^5.14.0",
+    "tslint-react": "^4.0.0",
+    "typescript-eslint-parser": "^22.0.0"
+  }
 }
