--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
+    "@types/redux-actions": "^2.6.0",
     "@types/uuidv4": "^2.0.0",
     "bezier-js": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
@@ -22,6 +23,7 @@
     "react-scripts": "^2.1.8",
     "react-transition-group": "^2.6.0",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.3.4000",
     "uuidv4": "^3.0.1"
