--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bezier-js": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
     "jest-canvas-mock": "^2.0.0-beta.1",
+    "jest-dom": "^3.1.3",
     "mathjs": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
+    "react-testing-library": "^6.0.4",
     "react-transition-group": "^2.6.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
