--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -17,9 +18,18 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "parser": "@typescript-eslint/parser",
   "plugins": [
     "react"
   ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "globals": {
+    "getEnv": false
+  },
   "rules": {
     "prefer-template": "error",
     "spaced-comment": [
@@ -104,8 +114,8 @@
       {
         "order": [
           "static-methods",
-          "lifecycle",
           "everything-else",
+          "lifecycle",
           "render"
         ],
         "groups": {
@@ -138,6 +148,28 @@
           ]
         }
       }
+    ],
+    "@typescript-eslint/indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "@typescript-eslint/prefer-interface": [
+      false
+    ],
+    "@typescript-eslint/interface-name-prefix": [
+      false
+    ],
+    "@typescript-eslint/no-explicit-any": [
+      false
+    ],
+    "@typescript-eslint/explicit-function-return-type": [
+      false
+    ],
+    "@typescript-eslint/no-non-null-assertion": [
+      false
     ]
   }
 }
